# AndroidJNICreateJavaVM

./: CMakeLists.txt  README.md  main.cpp
